[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0.88"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
opentelemetry = { version = "0.25.0" }
opentelemetry-otlp = { version = "0.25.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
blake3 = "1.5.4"
bytes = "1.7.2"
console-subscriber = "0.4.0"
dashmap = "6.1.0"
derive_builder = "0.20.1"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.30"
http = "1.1.0"
loom = "0.7.2"
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util = { version = "0.7.12", features = ["codec"] }
